// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updatePasswordDescribedByValue Tests should not update password field aria-describedby value when PasswordRequirements element does not exist 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "id": "title_1",
        "options": {
          "content": "Password expired",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "id": "button_1",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "id": "link_1",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updatePasswordDescribedByValue Tests should set password field aria-describedby value when PasswordRequirements element exists 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "id": "title_1",
        "options": {
          "content": "Password expired",
        },
        "type": "Title",
      },
      {
        "id": "PasswordRequirements_abc123",
        "options": {
          "header": "Password Requirements:",
          "id": "password-requirements-list",
          "requirements": [],
          "settings": {},
          "userInfo": {},
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "ariaDescribedBy": "PasswordRequirements_abc123",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "ariaDescribedBy": "PasswordRequirements_abc123",
        "options": {
          "inputMeta": {
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "id": "button_1",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "id": "link_1",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updatePasswordDescribedByValue Tests should update password field aria-describedby value when PasswordRequirements element exists and password fields contain existing describedby value 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "id": "title_1",
        "options": {
          "content": "Password expired",
        },
        "type": "Title",
      },
      {
        "id": "PasswordRequirements_abc123",
        "options": {
          "header": "Password Requirements:",
          "id": "password-requirements-list",
          "requirements": [],
          "settings": {},
          "userInfo": {},
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "ariaDescribedBy": "title_1 PasswordRequirements_abc123",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "ariaDescribedBy": "title_1 PasswordRequirements_abc123",
        "options": {
          "inputMeta": {
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "id": "button_1",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "id": "link_1",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
